--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,9 +1,10 @@
 {{ if eq .chezmoi.osRelease.id "arch" -}}
 #!/usr/bin/env sh
-pacman -S --needed git base-devel && git clone https://aur.archlinux.org/yay-bin.git && cd yay-bin && makepkg -si
-cd .. && rmdir -rf yay-bin
+cd  "$(mktemp -d)"
+sudo pacman -Syu && sudo pacman -S --needed git base-devel && git clone https://aur.archlinux.org/yay-bin.git && cd yay-bin && makepkg -si
+cd ~/
 yay
-yay -S antigen-git bitwarden-cli direnv nvm-git rbenv-git ripgrep ruby-build-git vim zsh zsh-theme-powerlevel10k-git
+yay -S antigen-git bitwarden-cli direnv nvm-git rbenv-git ripgrep ruby-build-git vim zsh zsh-theme-powerlevel10k-git openssh
+chsh -s /bin/zsh
 
 {{ end -}}
-
