add osx support

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,9 +1,15 @@
+{{ if eq .chezmoi.os "linux" -}}
 {{ if eq .chezmoi.osRelease.id "arch" -}}
-#!/usr/bin/env sh
+#!/usr/bin/env bash
 pacman -S --needed git base-devel && git clone https://aur.archlinux.org/yay-bin.git && cd yay-bin && makepkg -si
 cd .. && rmdir -rf yay-bin
 yay
 yay -S antigen-git bitwarden-cli direnv nvm-git rbenv-git ripgrep ruby-build-git vim zsh zsh-theme-powerlevel10k-git
+{{ end -}}
+{{ end -}}
+{{ if eq .chezmoi.os "darwin" -}}
+#!/usr/bin/env bash
+/usr/bin/env bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+brew install rbenv antigen direnv gnupg gnupg2
 
 {{ end -}}
-
