--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,7 +1,10 @@
 {{ if eq .chezmoi.os "linux" -}}
 {{ if eq .chezmoi.osRelease.id "arch" -}}
 #!/usr/bin/env bash
-sudo pacman -S --needed git base-devel && git clone https://aur.archlinux.org/yay-bin.git && cd yay-bin && makepkg -si
+sudo pacman -S --needed git base-devel
+if ! [ -x "$(command -v yay)" ]; then
+  git clone https://aur.archlinux.org/yay-bin.git && cd yay-bin && makepkg -si
+fi
 cd ~/ && rm -rf ~/yay-bin
 yay
 yay -Scc --needed antigen-git bitwarden-cli direnv nvm-git rbenv-git ripgrep ruby-build-git vim zsh zsh-theme-powerlevel10k-git openssh
