--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -1,6 +1,7 @@
 {{ if eq .chezmoi.os "linux" -}}
 {{ if eq .chezmoi.osRelease.id "arch" -}}
 #!/usr/bin/env bash
+mkdir -p ~/.log
 sudo pacman -S --needed git base-devel
 if ! [ -x "$(command -v yay)" ]; then
   git clone https://aur.archlinux.org/yay-bin.git && cd yay-bin && makepkg -si
