add various apps to support nb

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -8,7 +8,8 @@ if ! [ -x "$(command -v yay)" ]; then
 fi
 cd ~/ && rm -rf ~/yay-bin
 yay
-yay -Scc --needed antigen-git bitwarden-cli direnv nvm-git rbenv-git ripgrep ruby-build-git vim zsh zsh-theme-powerlevel10k-git openssh
+yay -Scc --needed antigen-git bitwarden-cli direnv nvm-git rbenv-git ripgrep ruby-build-git vim zsh zsh-theme-powerlevel10k-git openssh bat ncat pandoc ripgrep tig w3m ack catimg exa ripgrep-all 
+
 
 shell=$(pinky -l $USER|grep -oP 'Shell: \K.*')
 if [ $shell != "/bin/zsh" ]
@@ -18,7 +19,7 @@ then
 fi
 
 {{ if .bspwm -}}
-yay -Scc --needed bspwm sxhkd rofi alacritty picom dunst polybar xcursor-vanilla-dmz arandr pavucontrol lightdm lightdm-gtk-greeter nerd-fonts-complete feh noto-fonts zsh-theme-powerlevel10k-git gtk2 nerd-fonts-complete libfido2 ccid opensc google-chrome
+yay -Scc --needed bspwm sxhkd rofi alacritty picom dunst polybar xcursor-vanilla-dmz arandr pavucontrol lightdm lightdm-gtk-greeter nerd-fonts-complete feh noto-fonts gtk2 nerd-fonts-complete libfido2 ccid opensc google-chrome
 
 {{ end -}}
 {{ end -}}
