install tree using homebrew

--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -32,6 +32,6 @@ sudo "$(which nb)" env install
 #!/usr/bin/env bash
 /usr/bin/env bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 brew tap xwmx/taps
-brew install rbenv antigen direnv gnupg gnupg2 wget bat nmap pandoc ripgrep tig w3m ack catimg exa ripgrep-all nb
+brew install rbenv antigen direnv gnupg gnupg2 wget bat nmap pandoc ripgrep tig w3m ack catimg exa ripgrep-all nb tree
 
 {{ end -}}
