--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -31,7 +31,5 @@ sudo "$(which nb)" env install
 {{ if eq .chezmoi.os "darwin" -}}
 #!/usr/bin/env bash
 /usr/bin/env bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-brew tap xwmx/taps
-brew install rbenv antigen direnv gnupg gnupg2 wget bat nmap pandoc ripgrep tig w3m ack catimg exa ripgrep-all nb tree
-
+brew bundle
 {{ end -}}
