--- a/run_once_install-packages.sh.tmpl
+++ b/run_once_install-packages.sh.tmpl
@@ -31,5 +31,5 @@ sudo "$(which nb)" env install
 {{ if eq .chezmoi.os "darwin" -}}
 #!/usr/bin/env bash
 /usr/bin/env bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-brew bundle
+eval "$(/opt/homebrew/bin/brew shellenv)"
 {{ end -}}
