--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -6,6 +6,7 @@ if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 fi
 
+ZSH_CUSTOM=$HOME/.zsh/custom
 export LANG="en_US.UTF-8"
 
 # Setup history
