--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -6,7 +6,6 @@ if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]
   source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
 fi
 
-ZSH_CUSTOM=$HOME/.zsh/custom
 export LANG="en_US.UTF-8"
 
 # Setup history
@@ -212,8 +211,7 @@ export SBT_CREDENTIALS=${HOME}/.sbt/.credentials
 # specify alias for SSH to set TERM env var
 alias ssh='TERM=xterm-256color ssh'
 
-# pulsarctl completion
-fpath=($fpath ~/.zsh/completion)
+fpath=(~/.zsh/completion ~/.zsh/funcs $fpath)
 
 # setup rbenv
 eval "$(rbenv init -)"
@@ -234,16 +232,12 @@ if [ -f '/Users/nathanmills/Downloads/google-cloud-sdk/completion.zsh.inc' ]; th
 # End OSX specific setup
 ###########################
 
-{{ end -}}
+{{- end }}
 
-# setup hombrew
-if type "~/.linuxbrew/bin/brew" > /dev/null; then
-  eval $(~/.linuxbrew/bin/brew shellenv)
-fi
-
-#THIS MUST BE AT THE END OF THE FILE FOR SDKMAN TO WORK!!!
-export SDKMAN_DIR="~/.sdkman"
-[[ -s "~/.sdkman/bin/sdkman-init.sh" ]] && source "~/.sdkman/bin/sdkman-init.sh"
+{{ if eq .chezmoi.osRelease.id "arch" -}}
+# setup yay helpers
+autoload -Uz yay-needed yay-sync
+{{- end }}
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 [[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
