move arch pakcages to pkglist

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -154,6 +154,8 @@ fi
 alias dc=docker-compose
 alias dcr="docker-compose run --rm"
 alias tf="terraform"
+alias vim="nvim"
+alias vi="nvim"
 
 ##
 # End of Aliases
