--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -212,6 +212,9 @@ fpath=(~/.zsh/completion ~/.zsh/funcs $fpath)
 # OSX specific setup
 ###########################
 
+# Set JAVA_HOME
+export JAVA_HOME=`/usr/libexec/java_home`
+
 # The next line updates PATH for the Google Cloud SDK.
 if [ -f '/Users/nathanmills/Downloads/google-cloud-sdk/path.zsh.inc' ]; then . '/Users/nathanmills/Downloads/google-cloud-sdk/path.zsh.inc'; fi
 
