Fixes variable substitutions

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -196,7 +196,7 @@ zstyle :bracketed-paste-magic paste-init pasteinit
 zstyle :bracketed-paste-magic paste-finish pastefinish
 
 
-export PATH="${$HOME}/.cargo/bin:${KREW_ROOT:-$HOME/.krew}/bin:$PATH"
+export PATH="${HOME}/.cargo/bin:${KREW_ROOT:-$HOME/.krew}/bin:$PATH"
 
 # SBT Config
 export SBT_CREDENTIALS=${HOME}/.sbt/.credentials
