--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -107,28 +107,47 @@ scrolling:
 
 # Font configuration (changes require restart)
 font:
+
+{{- if eq .chezmoi.os "linux" }}
+  {{- if eq .chezmoi.osRelease.id "arch"}}
+
   normal:
-    #family: MesloLGM Nerd Font
-    family: MesloLGS NF
-    #family: FuraCode Nerd Font
+    family: MesloLGM Nerd Font #MesloLGS NF
     style: Regular
+
   bold:
-    #family: MesloLGM Nerd Font
-    family: MesloLGS NF
-    #family: FuraCode Nerd Font
+    family: MesloLGM Nerd Font #MesloLGS NF
     style: Bold
+
   italic:
-    #family: MesloLGM Nerd Font
-    family: MesloLGS NF
+    family: MesloLGM Nerd Font #MesloLGS NF
     style: Italic
+
   bold_italic:
-    #family: MesloLGM Nerd Font
-    family: MesloLGS NF
+    family: MesloLGM Nerd Font #MesloLGS NF
     style: Bold Italic
 
   # Point size
-  size: 14.0
+  size: 10.0 #14.0
+  {{ else -}}
 
+  normal:
+    family: MesloLGM Nerd Font #MesloLGS NF
+    style: Regular
+  bold:
+    family: MesloLGM Nerd Font #MesloLGS NF
+    style: Bold
+  italic:
+    family: MesloLGM Nerd Font #MesloLGS NF
+    style: Italic
+  bold_italic:
+    family: MesloLGM Nerd Font #MesloLGS NF
+    style: Bold Italic
+
+  # Point size
+  size: 10.0 #14.0
+  {{- end }}
+{{- end }}
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
@@ -143,151 +162,8 @@ font:
     x: 0
     y: 0
 
-  # Thin stroke font rendering (macOS only)
-  #
-  # Thin strokes are suitable for retina displays, but for non-retina screens
-  # it is recommended to set `use_thin_strokes` to `false`.
-  use_thin_strokes: false
-
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
-
-# Colors (Tomorrow Night Bright)
-#colors:
-  # Default colors
-  #primary:
-    #background: '0x000000'
-    #foreground: '0xeaeaea'
-
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not
-    # present. If the bright foreground color is not set, or
-    # `draw_bold_text_with_bright_colors` is `false`, the normal foreground
-    # color will be used.
-    #dim_foreground: '#828482'
-    #bright_foreground: '#eaeaea'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Vi mode cursor colors
-  #
-  # Colors for the cursor when the vi mode is active.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #vi_mode_cursor:
-  #  text: CellBackground
-  #  cursor: CellForeground
-
-  # Search colors
-  #
-  # Colors used for the search bar and match highlighting.
-  #search:
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #matches:
-    #  foreground: '#000000'
-    #  background: '#ffffff'
-    #focused_match:
-    #  foreground: '#ffffff'
-    #  background: '#000000'
-
-    #bar:
-    #  background: '#c5c8c6'
-    #  foreground: '#1d1f21'
-
-  # Keyboard regex hints
-  #hints:
-    # Fist character in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #start:
-    #  foreground: '#1d1f21'
-    #  background: '#e9ff5e'
-
-    # All characters after the first one in the hint label
-    #
-    # Allowed values are CellForeground/CellBackground, which reference the
-    # affected cell, or hexadecimal colors like #ff00ff.
-    #end:
-    #  foreground: '#e9ff5e'
-    #  background: '#1d1f21'
-
-  # Line indicator
-  #
-  # Color used for the indicator displaying the position in history during
-  # search and vi mode.
-  #
-  # By default, these will use the opposing primary color.
-  #line_indicator:
-  #  foreground: None
-  #  background: None
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area.
-  #
-  # Allowed values are CellForeground/CellBackground, which reference the
-  # affected cell, or hexadecimal colors like #ff00ff.
-  #selection:
-  #  text: CellBackground
-  #  background: CellForeground
-
-  # Normal colors
-  #normal:
-    # black:   '0x000000'
-    # red:     '0xd54e53'
-    # green:   '0xb9ca4a'
-    # yellow:  '0xe6c547'
-    # blue:    '0x7aa6da'
-    # magenta: '0xc397d8'
-    # cyan:    '0x70c0ba'
-    # white:   '0xeaeaea'
-
-  # Bright colors
-  #bright:
-    # black:   '0x666666'
-    # red:     '0xff3334'
-    # green:   '0x9ec400'
-    # yellow:  '0xe7c547'
-    # blue:    '0x7aa6da'
-    # magenta: '0xb77ee0'
-    # cyan:    '0x54ced6'
-    # white:   '0xffffff'
-
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '#131415'
-  #  red:     '#864343'
-  #  green:   '#777c44'
-  #  yellow:  '#9e824c'
-  #  blue:    '#556a7d'
-  #  magenta: '#75617b'
-  #  cyan:    '#5b7d78'
-  #  white:   '#828482'
-
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '#ff00ff' }`
-  #
-  #indexed_colors: []
 
 # Bell
 #
