--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -112,40 +112,40 @@ font:
   {{- if eq .chezmoi.osRelease.id "arch"}}
 
   normal:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGM Nerd Font
     style: Regular
 
   bold:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGM Nerd Font
     style: Bold
 
   italic:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGM Nerd Font
     style: Italic
 
   bold_italic:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGM Nerd Font
     style: Bold Italic
 
   # Point size
-  size: 10.0 #14.0
+  size: 10.0
   {{ else -}}
 
   normal:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGS NF
     style: Regular
   bold:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGS NF
     style: Bold
   italic:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGS NF
     style: Italic
   bold_italic:
-    family: MesloLGM Nerd Font #MesloLGS NF
+    family: MesloLGS NF
     style: Bold Italic
 
   # Point size
-  size: 10.0 #14.0
+  size: 14.0
   {{- end }}
 {{- end }}
   # Offset is the extra space around each character. `offset.y` can be thought
