--- a/dot_config/alacritty/alacritty.yml.tmpl
+++ b/dot_config/alacritty/alacritty.yml.tmpl
@@ -129,7 +129,8 @@ font:
 
   # Point size
   size: 10.0
-  {{ else -}}
+  {{- end }}
+  {{- else }}
 
   normal:
     family: MesloLGS NF
@@ -146,8 +147,8 @@ font:
 
   # Point size
   size: 14.0
-  {{- end }}
 {{- end }}
+
   # Offset is the extra space around each character. `offset.y` can be thought
   # of as modifying the line spacing, and `offset.x` as modifying the letter
   # spacing.
