--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -15,3 +15,8 @@
 	rebase = true
 [init]
 	defaultBranch = main
+[filter "lfs"]
+	required = true
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
