--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -221,6 +221,12 @@ if [ -f "/opt/homebrew/share/google-cloud-sdk/path.zsh.inc" ]; then source "/opt
 # The next line enables shell command completion for gcloud.
 if [ -f "/opt/homebrew/share/google-cloud-sdk/path.zsh.inc" ]; then source "/opt/homebrew/share/google-cloud-sdk/path.zsh.inc"; fi
 
+# Setup LibXML
+export PATH="/opt/homebrew/opt/libxml2/bin:$PATH"
+export LDFLAGS="-L/opt/homebrew/opt/libxml2/lib"
+export CPPFLAGS="-I/opt/homebrew/opt/libxml2/include"
+export PKG_CONFIG_PATH="/opt/homebrew/opt/libxml2/lib/pkgconfig"
+
 ###########################
 # End OSX specific setup
 ###########################
