--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -227,6 +227,9 @@ export LDFLAGS="-L/opt/homebrew/opt/libxml2/lib"
 export CPPFLAGS="-I/opt/homebrew/opt/libxml2/include"
 export PKG_CONFIG_PATH="/opt/homebrew/opt/libxml2/lib/pkgconfig"
 
+# setup FZF
+[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
+
 ###########################
 # End OSX specific setup
 ###########################
