--- a/dot_config/nvim/lua/rivernate/packer.lua.tmpl
+++ b/dot_config/nvim/lua/rivernate/packer.lua.tmpl
@@ -25,6 +25,14 @@ vim.cmd([[
   augroup end
 ]])
 
+{{ if .work -}}
+-- Config for codeium
+vim.g.codeium_server_config = {
+    portal_url = 'https://codeium.derivita.team',
+    api_url = 'https://codeium.derivita.team/_route/api_server'
+  }
+{{ end }}
+
 return require("packer").startup(function()
   use("wbthomason/packer.nvim")
 
@@ -40,7 +48,11 @@ return require("packer").startup(function()
   use("saadparwaiz1/cmp_luasnip")
   use("onsails/lspkind-nvim")
   use("simrat39/symbols-outline.nvim")
+  {{ if .work -}}
+  use({'Exafunction/codeium.vim', tag = '1.2.36'})
+  {{ else -}}
   use("github/copilot.vim")
+  {{ end -}}
 
   use({ "bazelbuild/vim-bazel", requires = { { "google/vim-maktaba" } } })
   use({
