Add init for ocaml

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -243,6 +243,12 @@ export PATH="/opt/homebrew/opt/curl/bin:$PATH"
 {{- end }}
 
 ###########################
+# Setup OCaml
+##########################
+
+[[ ! -r /Users/nathan/.opam/opam-init/init.zsh ]] || source /Users/nathan/.opam/opam-init/init.zsh > /dev/null 2> /dev/n
+
+###########################
 # Setup asdf
 ###########################
 {{ if eq (index .chezmoi.osRelease "id" ) "arch" -}}
