--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -2,11 +2,12 @@ source ~/.env_vars
 # Enable Powerlevel10k instant prompt. Should stay close to the top of ~/.zshrc.
 # Initialization code that may require console input (password prompts, [y/n]
 # confirmations, etc.) must go above this block; everything else may go below.
-if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
-  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
-fi
+#if [[ -r "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh" ]]; then
+#  source "${XDG_CACHE_HOME:-$HOME/.cache}/p10k-instant-prompt-${(%):-%n}.zsh"
+#fi
 
 export LANG="en_US.UTF-8"
+export SHELL="/bin/zsh"
 
 # Setup history
 HISTFILE=~/.zsh_history
@@ -98,7 +99,7 @@ antigen bundle zsh-users/zsh-history-substring-search
 antigen bundle zsh-users/zsh-autosuggestions
 
 #P10k theme
-antigen theme romkatv/powerlevel10k
+#antigen theme romkatv/powerlevel10k
 
 # Tell Antigen that you're done.
 antigen apply
@@ -278,5 +279,7 @@ autoload -Uz yay-needed yay-sync
 {{- end }}
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
-[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
+#[[ ! -f ~/.p10k.zsh ]] || source ~/.p10k.zsh
 
+export STARSHIP_CONFIG="${XDG_CONFIG_HOME}/starship/config.toml"
+eval "$(starship init zsh)"
