--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -22,7 +22,15 @@
 	process = git-lfs filter-process
 [credential "https://github.com"]
 	helper =
+  {{ if eq .chezmoi.os "darwin" -}}
 	helper = !/opt/homebrew/bin/gh auth git-credential
+  {{ else if eq .chezmoi.os "linux" -}}
+  helper = !/usr/bin/gh auth git-credential
+{{ end -}}
 [credential "https://gist.github.com"]
 	helper =
+  {{ if eq .chezmoi.os "darwin" -}}
 	helper = !/opt/homebrew/bin/gh auth git-credential
+  {{ else if eq .chezmoi.os "linux" -}}
+  helper = !/usr/bin/gh auth git-credential
+  {{ end -}}
