Add auto bg color switch for nvim

--- a/dot_config/nvim/lua/rivernate/packer.lua.tmpl
+++ b/dot_config/nvim/lua/rivernate/packer.lua.tmpl
@@ -100,6 +100,7 @@ return require("packer").startup(function()
   use("NvChad/nvim-colorizer.lua")
 
   -- THEMES--
+  use({ "typicode/bg.nvim" })
   use("rktjmp/lush.nvim")
 
   use("gruvbox-community/gruvbox")
