Fix typo in opam line

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -241,7 +241,7 @@ export PATH="/opt/homebrew/opt/curl/bin:$PATH"
 # Setup OCaml
 ##########################
 
-[[ ! -r /Users/nathan/.opam/opam-init/init.zsh ]] || source /Users/nathan/.opam/opam-init/init.zsh > /dev/null 2> /dev/n
+[[ ! -r /Users/nathan/.opam/opam-init/init.zsh ]] || source /Users/nathan/.opam/opam-init/init.zsh > /dev/null 2> /dev/null
 
 ###########################
 # Setup asdf
