Update node deno and direnv

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -98,6 +98,9 @@ antigen bundle zsh-users/zsh-history-substring-search
 # Auto Suggestions
 antigen bundle zsh-users/zsh-autosuggestions
 
+# Dotenv
+antigen bundle dotenv
+
 #P10k theme
 #antigen theme romkatv/powerlevel10k
 
