Tweak things to work better with non arch distros

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -2,7 +2,7 @@
 {{- $name := promptString "name" -}}
 {{- $bspwm := promptBool "Are you wanting BSPWM" -}}
 {{- $hyprland :=promptBool "Are you wanting Hyprland" -}}
-{{- $work := promptBool "Is this for work?" -}}
+{{- $work := promptBool "Is this for work" -}}
 
 [data]
     bspwm = {{ $bspwm }}
