--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -76,7 +76,9 @@ fi
 source $(brew --prefix)/share/antigen/antigen.zsh
 {{- end }}
 
-if [ -f /usr/share/zsh/share/antigen.zsh ]; then
+if [ -f "${HOME}/antigen.zsh" ]; then
+  source "${HOME}/antigen.zsh"
+elif [ -f /usr/share/zsh/share/antigen.zsh ]; then
   source /usr/share/zsh/share/antigen.zsh
 elif [ -f /usr/local/share/antigen/antigen.zsh ]; then
   source /usr/local/share/antigen/antigen.zsh
@@ -251,8 +253,9 @@ export PATH="/opt/homebrew/opt/curl/bin:$PATH"
 ###########################
 {{ if eq (index .chezmoi.osRelease "id" ) "arch" -}}
 . /opt/asdf-vm/asdf.sh
+{{ else if eq .chezmoi.os "linux" -}}
+. "$HOME/.asdf/asdf.sh"
 {{- end }}
-
 {{ if eq .chezmoi.os "darwin" -}}
 . $(brew --prefix asdf)/libexec/asdf.sh
 . $(brew --prefix asdf)/etc/bash_completion.d/asdf.bash
