--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -1,13 +1,20 @@
+# █▀▀ █▄░█ █░█
+# ██▄ █░▀█ ▀▄▀
+env = XDG_CURRENT_DESKTOP=Hyprland
+
 # █▀▀ ▀▄▀ █▀▀ █▀▀
 # ██▄ █░█ ██▄ █▄▄
 exec-once = wl-clipboard-history -t
 exec-once = ~/.config/hypr/xdg-portal-hyprland
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-# exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+{{ if eq .chezmoi.osRelease.id "fedora" -}}
+exec-once = /usr/libexec/polkit-gnome-authentication-agent-1
+{{ else if eq .chezmoi.osRelease.id "arch" -}}
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+{{- end }}
 exec-once = wlsunset -S 9:00 -s 19:30
-exec = swaybg -m fill -i ~/.wallpapers/the-sands-of-scheveningen-ultra-hd.jpg
+exec = swaybg -m fill -i "${find ~/.wallpapers/dark -type f | shuf -n1}"
 exec-once = waybar --log-level=INFO &> ~/.log/waybar.log
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
@@ -18,7 +25,7 @@ monitor=,preferred,auto,1
 # █ █░▀█ █▀▀ █▄█ ░█░
 input {
   kb_layout = us
-  follow_mouse = 1
+  follow_mouse = 2
   touchpad {
     natural_scroll = no
   }
