--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -153,6 +153,7 @@ alias dcr="docker-compose run --rm"
 alias tf="terraform"
 alias vim="nvim"
 alias vi="nvim"
+alias vimdiff="nvim -d"
 
 ##
 # End of Aliases
@@ -255,6 +256,8 @@ export PATH="/opt/homebrew/opt/curl/bin:$PATH"
 . /opt/asdf-vm/asdf.sh
 {{ else if eq .chezmoi.os "linux" -}}
 . "$HOME/.asdf/asdf.sh"
+. ~/.asdf/completions/asdf.bash
+. ~/.asdf/plugins/java/set-java-home.zsh
 {{- end }}
 {{ if eq .chezmoi.os "darwin" -}}
 . $(brew --prefix asdf)/libexec/asdf.sh
@@ -269,6 +272,9 @@ export PATH="/opt/homebrew/opt/curl/bin:$PATH"
 # direnv (direnv.net)
 ###########################
 eval "$(direnv hook zsh)"
+###########################
+# End direnv setup
+###########################
 
 ###########################
 # Setup github copilot cli
@@ -277,6 +283,9 @@ if command -v github-copilot-cli &> /dev/null
 then
   eval "$(github-copilot-cli alias -- "$0")"
 fi
+###########################
+# End github copilot cli
+###########################
 
 {{ if eq (index .chezmoi.osRelease "id" ) "arch" -}}
 # setup yay helpers
