more fedora changes

--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -160,6 +160,8 @@ $mainMod = SUPER
 #bind = SUPER, L, exec, /home/titus/w11
 bind = SUPER,  L, exec, wlogout
 bind = SUPER, F1, exec, ~/.config/hypr/keybind
+bind =, XF86MonBrightnessUp, exec, brightnessctl set +10%
+bind =, XF86MonBrightnessDown, exec, brightnessctl set 10%-
 
 # █▀▄▀█ █░█ █░░ ▀█▀ █ █▀▄▀█ █▀▀ █▀▄ █ ▄▀█
 # █░▀░█ █▄█ █▄▄ ░█░ █ █░▀░█ ██▄ █▄▀ █ █▀█
