--- a/dot_config/nvim/lua/rivernate/packer.lua.tmpl
+++ b/dot_config/nvim/lua/rivernate/packer.lua.tmpl
@@ -91,6 +91,33 @@ return require("packer").startup(function()
 
   use("NvChad/nvim-colorizer.lua")
 
+  -- Notes --
+  use({
+    "epwalsh/obsidian.nvim",
+    tag = "*",  -- recommended, use latest release instead of latest commit
+    requires = {
+      -- Required.
+      "nvim-lua/plenary.nvim",
+
+      -- see below for full list of optional dependencies 👇
+    },
+    config = function()
+    require("obsidian").setup({
+      workspaces = {
+        {
+          name = "personal",
+          path = "~/vaults/personal",
+        },
+        {
+          name = "work",
+          path = "~/vaults/work",
+        },
+      },
+      -- see below for full list of options 👇
+    })
+  end,
+})
+
   -- THEMES--
   use({ "typicode/bg.nvim" })
   use("rktjmp/lush.nvim")
