--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -9,6 +9,9 @@ source ~/.env_vars
 export LANG="en_US.UTF-8"
 export SHELL="/bin/zsh"
 
+# Setup Gnome Keyring for ssh
+export SSH_AUTH_SOCK=$XDG_RUNTIME_DIR/gcr/ssh
+
 # Setup history
 HISTFILE=~/.zsh_history
 
@@ -90,7 +93,6 @@ antigen use oh-my-zsh
 # Bundles from the default repo (robbyrussell's oh-my-zsh).
 antigen bundle git
 antigen bundle command-not-found
-antigen bundle ssh-agent
 
 # Syntax highlighting bundle.
 antigen bundle zsh-users/zsh-syntax-highlighting
