Setup hyprctl-worspace monitor config

--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -22,6 +22,19 @@ exec-once = waybar --log-level=INFO &> ~/.log/waybar.log
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 monitor=,preferred,auto,1
 
+# █░█░█ █▀█ █▀█ █▄▀ █▀█ █▀  ▄▀█ █▀▀ █▀▀
+# ▀▄▀▄▀ █▄█ █▀▄ █░█ █▀▀ ▄█  █▀█ █▄▄ ██▄
+workspace = 1, monitor:DP-10
+workspace = 2, monitor:DP-10
+workspace = 3, monitor:eDP-1
+workspace = 4, monitor:eDP-1
+workspace = 5, monitor:DP-10
+workspace = 6, monitor:DP-10
+workspace = 7, monitor:DP-10
+workspace = 8, monitor:DP-10
+workspace = 9, monitor:DP-10
+
+
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
 input {
