Add zsh completions bundle

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -94,6 +94,9 @@ antigen use oh-my-zsh
 antigen bundle git
 antigen bundle command-not-found
 
+# Additional Completions
+antigen bundle zsh-users/zsh-completions
+
 # Syntax highlighting bundle.
 antigen bundle zsh-users/zsh-syntax-highlighting
 
