--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -20,19 +20,20 @@ exec-once = waybar --log-level=INFO &> ~/.log/waybar.log
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
+monitor=eDP-1, 2256x1504, 0x0, 1
 monitor=,preferred,auto,1
 
 # █░█░█ █▀█ █▀█ █▄▀ █▀█ █▀  ▄▀█ █▀▀ █▀▀
 # ▀▄▀▄▀ █▄█ █▀▄ █░█ █▀▀ ▄█  █▀█ █▄▄ ██▄
-workspace = 1, monitor:DP-10
-workspace = 2, monitor:DP-10
+workspace = 1, monitor:DP-10, monitor:DP-3
+workspace = 2, monitor:DP-10, monitor:DP-3
 workspace = 3, monitor:eDP-1
 workspace = 4, monitor:eDP-1
-workspace = 5, monitor:DP-10
-workspace = 6, monitor:DP-10
-workspace = 7, monitor:DP-10
-workspace = 8, monitor:DP-10
-workspace = 9, monitor:DP-10
+workspace = 5, monitor:DP-10, monitor:DP-3
+workspace = 6, monitor:DP-10, monitor:DP-3
+workspace = 7, monitor:DP-10, monitor:DP-3
+workspace = 8, monitor:DP-10, monitor:DP-3
+workspace = 9, monitor:DP-10, monitor:DP-3
 
 
 # █ █▄░█ █▀█ █░█ ▀█▀
