Add framework and x1 monitors

--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -20,7 +20,8 @@ exec-once = waybar --log-level=INFO &> ~/.log/waybar.log
 
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
-monitor=eDP-1, 2256x1504, 0x0, 1
+monitor=desc:LG Display 0x058B,2560x1504,0x0,1.6
+monitor=desc: BOE 0x0BCA,2256x1504,0x0,1
 monitor=,preferred,auto,1
 
 # █░█░█ █▀█ █▀█ █▄▀ █▀█ █▀ ▄▀█ █▀▀ █▀▀
