--- a/dot_config/nvim/lua/rivernate/packer.lua.tmpl
+++ b/dot_config/nvim/lua/rivernate/packer.lua.tmpl
@@ -112,8 +112,18 @@ return require("packer").startup(function()
           name = "work",
           path = "~/vaults/work",
         },
+        {
+          name = "church",
+          path = "~/vaults/church",
+        },
       },
-      -- see below for full list of options 👇
+      templates = {
+        subdir = "templates",
+        date_format = "%Y-%m-%d",
+        time_format = "%H:%M",
+        -- A map for custom variables, the key should be the variable and the value a function
+        substitutions = {},
+      },
     })
   end,
 })
