--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -100,6 +100,7 @@ antigen bundle command-not-found
 
 # Additional Completions
 antigen bundle zsh-users/zsh-completions
+antigen bundle gcloud
 
 # Syntax highlighting bundle.
 antigen bundle zsh-users/zsh-syntax-highlighting
