--- a/dot_config/hypr/hyprland.conf.tmpl
+++ b/dot_config/hypr/hyprland.conf.tmpl
@@ -26,8 +26,8 @@ monitor=,preferred,auto,1
 
 # █░█░█ █▀█ █▀█ █▄▀ █▀█ █▀ ▄▀█ █▀▀ █▀▀
 # ▀▄▀▄▀ █▄█ █▀▄ █░█ █▀▀ ▄█ █▀█ █▄▄ ██▄
-workspace = 1, monitor:DP-10, monitor:DP-3
-workspace = 2, monitor:DP-10, monitor:DP-3
+workspace = 1, monitor:DP-10, monitor:desc:LG Electronics 27GL850 912NTVSC8991
+workspace = 2, monitor:DP-10, monitor:desc:LG Electronics 27GL850 912NTVSC8991
 workspace = 3, monitor:eDP-1
 workspace = 4, monitor:eDP-1
 workspace = 5, monitor:DP-10, monitor:DP-3
