Add antidote config for arch linux

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -94,6 +94,8 @@ elif [ -f /usr/share/zsh/share/antidote.zsh ]; then
   source /usr/share/zsh/share/antidote.zsh
 elif [ -f /usr/local/share/antidote/antidote.zsh ]; then
   source /usr/local/share/antidote/antidote.zsh
+elif [ -f /usr/share/zsh-antidote/antidote.zsh ]; then
+  source /usr/share/zsh-antidote/antidote.zsh
 fi
 
 # initialize plugins statically with ${ZDOTDIR:-~}/.zsh_plugins.txt
