--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -188,8 +188,12 @@ pastefinish() {
 zstyle :bracketed-paste-magic paste-init pasteinit
 zstyle :bracketed-paste-magic paste-finish pastefinish
 
-
 export PATH="${HOME}/.cargo/bin:${KREW_ROOT:-$HOME/.krew}/bin:$PATH"
+
+# go
+export GOPATH=$(asdf where golang)/packages
+export GOROOT=$(asdf where golang)/go
+export PATH="${PATH}:$(go env GOPATH)/bin"
 
 # SBT Config
 export SBT_CREDENTIALS=${HOME}/.sbt/.credentials
