Add Fidget to neovim

--- a/dot_config/nvim/lua/rivernate/lazy.lua.tmpl
+++ b/dot_config/nvim/lua/rivernate/lazy.lua.tmpl
@@ -48,6 +48,10 @@ require("lazy").setup({
   },
   "saadparwaiz1/cmp_luasnip",
   "onsails/lspkind-nvim",
+  {
+    "j-hui/fidget.nvim",
+    opts = {},
+  },
   {{ if .work -}}
   'Exafunction/codeium.vim',
   {{ else -}}
