--- a/dot_config/polybar/config.ini.tmpl
+++ b/dot_config/polybar/config.ini.tmpl
@@ -23,7 +23,7 @@ border-color = #000
 
 [base]
 font-0 = "FiraCode Nerd Font:style=Retina:size=12"
-font-1 = "Noto Color Emoji:size=9"
+font-1 = "Noto Color Emoji:scale=9;0"
 dpi = -1
 width = 100%
 height = ${env:POLYBAR_HEIGHT:40}
