Set cloudsdk python path

--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -9,6 +9,8 @@ source ~/.env_vars
 export LANG="en_US.UTF-8"
 export SHELL="/bin/zsh"
 
+export CLOUDSDK_PYTHON="/usr/bin/python"
+
 # Setup Gnome Keyring for ssh
 export SSH_AUTH_SOCK=$XDG_RUNTIME_DIR/gcr/ssh
 
