--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -17,10 +17,22 @@ export SSH_AUTH_SOCK=$XDG_RUNTIME_DIR/gcr/ssh
 # Setup history
 HISTFILE=~/.zsh_history
 
+###########################
+# Setup asdf
+###########################
 
+if [ -f "${HOME}/.asdf/asdf.sh" ]; then
+  . "${HOME}/.asdf/asdf.sh"
+  # append completions to fpath
+  fpath=(${ASDF_DIR}/completions $fpath)
+fi
 if [ -f "${HOME}/.asdf/plugins/java/set-java-home.zsh" ]; then
 . ~/.asdf/plugins/java/set-java-home.zsh
 fi
+
+###########################
+# End asdf setup
+###########################
 
 # enable auto complete
 autoload -Uz compinit
@@ -243,39 +255,12 @@ export PATH="/opt/homebrew/opt/curl/bin:$PATH"
 [[ ! -r /Users/nathan/.opam/opam-init/init.zsh ]] || source /Users/nathan/.opam/opam-init/init.zsh > /dev/null 2> /dev/null
 
 ###########################
-# Setup asdf
-###########################
-{{ if eq (index .chezmoi.osRelease "id" ) "arch" -}}
-. /opt/asdf-vm/asdf.sh
-{{ else if eq .chezmoi.os "linux" -}}
-. "$HOME/.asdf/asdf.sh"
-. ~/.asdf/completions/asdf.bash
-. ~/.asdf/plugins/java/set-java-home.zsh
-{{- end }}
-{{ if eq .chezmoi.os "darwin" -}}
-. $(brew --prefix asdf)/libexec/asdf.sh
-. $(brew --prefix asdf)/etc/bash_completion.d/asdf.bash
-{{- end }}
-
-###########################
-# End asdf setup
-###########################
-
-###########################
 # GO
 ###########################
 export GOPATH=$(asdf where golang)/packages
 export GOROOT=$(asdf where golang)/go
 export PATH="${PATH}:$(go env GOPATH)/bin"
 
-
-###########################
-# direnv (direnv.net)
-###########################
-eval "$(direnv hook zsh)"
-###########################
-# End direnv setup
-###########################
 
 ###########################
 # Setup github copilot cli
